add register and login and logout endpoints
