# routes/api.php
@@ -13,7 +13,12 @@ use Illuminate\Support\Facades\Route;
 |
 */
 
+Route::post('/auth/login', [App\Http\Controllers\Api\AuthController::class, 'login']);
+Route::post('/auth/register',[App\Http\Controllers\Api\AuthController::class, 'register']);
+
 Route::middleware('auth:sanctum')->group(function () {
+    Route::delete('/auth/logout',[App\Http\Controllers\Api\AuthController::class, 'logout']);
+
     Route::get('/user', App\Http\Controllers\Api\MeController::class);
     Route::apiResource('items', App\Http\Controllers\Api\ItemController::class)->only(['index', 'show']);
 
